User_type was kind of useless tbf

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,7 +6,7 @@
 #  discord_id :string
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
-#  user_type  :string
+#  server_id  :string
 #
 
 one:
